# QtWs2022

./: CMakeLists.txt  README.m  main.cpp
qml/: SeparateWindow.qmlc  main.qml  main.qmlc
scene/: Scene.cpp  Scene.h  SceneProvider.cpp  SceneProviderRenderer.cpp  SceneProviderRenderer.h  SceneRenderer.cpp  SceneRenderer.h
service/: ServiceManager.h
